@@ -1,3 +1,7 @@
+2001-02-27  Petr Mikulik  <mikulik@physics.muni.cz>
+
+	* config/makefile.mgw config/term.c: support for pipes under Windows.
+
 2001-03-05  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
 
 	* src/plot2d.c (get_data): Automatically revert to 'with points'
